--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -2,6 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
+import Comments from "@components/Comments.astro";
 import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
@@ -98,6 +99,7 @@ const layoutProps = {
 
       <ShareLinks />
     </div>
+    <Comments />
   </main>
   <Footer />
 </Layout>
